--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,12 @@
 .Nav {
     background-color: #404552 !important;
-    display: flex !important;
-    justify-content: center !important;
     
 }
 
 .Nav a{
     color: #ffffff !important;
+}
+
+img {
+    cursor: pointer;
 }
