--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -3,4 +3,15 @@
     border-radius: 0.2em;
     -webkit-box-shadow: 4px 5px 9px 3px rgba(0, 0, 0, 0.38);
     box-shadow: 4px 5px 9px 3px rgba(0, 0, 0, 0.38);
+    padding: 1rem;
+    cursor: pointer;
+}
+
+.ListItem p {
+    font-size: 0.8rem;
+    color: #a19e9e;
+}
+
+.ListItem h2 {
+    font-size: 1.5rem;
 }
